--- a/MockupActionCommandGame/Views/Home/LoginPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginPage.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 @*<a type="submit" asp-controller="Home" asp-action="Login" class="btn btn-lg btn-shine" id="btnLogin">Log in</a>*@
-                <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">LoginPage</button>
+                <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">Log in</button>
                 
 
             </div>
