--- a/MockupActionCommandGame/Views/Home/RegisterPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/RegisterPage.cshtml
@@ -1,5 +1,4 @@
-﻿@model ActionCommandGame.Ui.WebApp.Models.SignInModel
-@{
+﻿@{
     ViewData["Title"] = "LoginPage";
 }
 <head>
@@ -12,14 +11,14 @@
         
         <div asp-validation-summary="ModelOnly"></div>
 
-        <form method="post">
-
+        <form method="post" asp-action="Register">
+            @model ActionCommandGame.Api.Authentication.Model.UserRegistrationRequest
             <hr/>
 
             <div class="form-group">
-                <label asp-for="Username">Username:</label>
-                <input asp-for="Username" class="form-control"/>
-                <span asp-validation-for="Username"></span>
+                <label asp-for="Email">Username:</label>
+                <input asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password:</label>
@@ -28,8 +27,7 @@
             </div>
             
             <div class="form-group">
-                <a type="" asp-controller="Home" asp-action="LoginPage" class="btn btn-lg btn-shine" id="btnLogin">Register</a>
-                @*<button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">LoginPage</button>*@
+               <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">Register</button>
 
             </div>
         </form>
