Registration + begin Authorize for shop

--- a/MockupActionCommandGame/Views/Home/LoginPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginPage.cshtml
@@ -19,12 +19,12 @@
 
             <div class="form-group">
                 <label asp-for="Email">Email:</label>
-                <input asp-for="Email" class="form-control"/>
+                <input asp-for="Email" value="bavo.ketels@vives.be" class="form-control"/>
                 <span asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password:</label>
-                <input asp-for="Password" class="form-control"/>
+                <input asp-for="Password" value="Test123$" class="form-control"/>
                 <span asp-validation-for="Password"></span>
             </div>
             <div class="form-group">
@@ -35,7 +35,6 @@
 
             </div>
             <div class="form-group">
-                @*<a type="submit" asp-controller="Home" asp-action="Login" class="btn btn-lg btn-shine" id="btnLogin">Log in</a>*@
                 <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">Log in</button>
                 
 
