comment code logout button in Shared/_Layout.cshtml en characterSelection

--- a/MockupActionCommandGame/Views/Game/Game.cshtml
+++ b/MockupActionCommandGame/Views/Game/Game.cshtml
@@ -104,7 +104,11 @@
                 </div>
             </div>
 
-            <a asp-controller="Home" asp-action="LoginPage" class="btn btn-shine" id="btnQuit">Quit</a>
+            <form method="post" asp-controller="Home" asp-action="LogOut">
+                <button type="submit" class="btn btn-shine" id="btnQuit">Quit</button>
+                @*<a asp-controller="Home" asp-action="LogOut" class="btn btn-shine" id="btnQuit">Quit</a>*@
+            </form>
+            
         </section>
     </div>
     <div class="row justify-content-center" id="buttonRow">
