--- a/MockupActionCommandGame/Views/Home/CharacterSelectionPartial.cshtml
+++ b/MockupActionCommandGame/Views/Home/CharacterSelectionPartial.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@*@model ActionCommandGame.Services.Model.Results.PlayerResult*@
 <tr>
     <td >
-        <a asp-controller="Game" asp-action="Game">BavoKetels</a>
+        <a asp-controller="Game" asp-action="Game">@*@Model.Name*@Bavo Ketels</a>
     </td>
 </tr>
