--- a/MockupActionCommandGame/Views/Shared/_Layout.cshtml
+++ b/MockupActionCommandGame/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         </main>
     </div>
     
-@if (User.Identity is not null & User.Identity.IsAuthenticated)
+@*@if (User.Identity is not null & User.Identity.IsAuthenticated)
 {
     @User.Identity.Name
     <form method="post" asp-controller="Home" asp-action="LogOut">
@@ -26,7 +26,7 @@
 else
 {
     <a class="nav-link text-dark" asp-controller="Home" asp-action="Login">Sign In</a>
-}
+}*@
     
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
