--- a/MockupActionCommandGame/Views/Shop/Shop.cshtml
+++ b/MockupActionCommandGame/Views/Shop/Shop.cshtml
@@ -10,7 +10,7 @@
 <body>
 <div class="row">
     <div class="col-8">
-        <h1>@*Welcome Stranger! Anything you need?*@The Dukes Emporium</h1>
+        <h1>@*Welcome Stranger! Anything you need?*@The Duke's Emporium</h1>
     </div>
     <div class="col-2">
         <a class="btn btn-shine" asp-controller="Game" asp-action="Game">Leave</a>
