using the sql server + insert 3 items and 4 players

--- a/MockupActionCommandGame/Views/Home/LoginPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginPage.cshtml
@@ -19,7 +19,7 @@
 
             <div class="form-group">
                 <label asp-for="Email">Email:</label>
-                <input asp-for="Email" value="bavo.ketels@vives.be" class="form-control"/>
+                <input asp-for="Email" value="michel.dekiere@student.vives.be" class="form-control"/>
                 <span asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
