inladen van de charcters van de user in CharacterSelection

--- a/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
+++ b/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
@@ -8,13 +8,11 @@
 
 <table class="table">
     <tbody>
-    @*@foreach (var player in Model)
+    @foreach (var player in Model)
     {
         <partial name="CharacterSelectionPartial" model=player/>
-    }*@
+    }
 
-    <partial name="CharacterSelectionPartial"/>
-    
     </tbody>
 </table>
 
