implementeren buy() in shop --> work in progress

--- a/MockupActionCommandGame/Views/Game/Game.cshtml
+++ b/MockupActionCommandGame/Views/Game/Game.cshtml
@@ -115,7 +115,7 @@
     </div>
     <div class="row justify-content-center" id="buttonRow">
 
-          <a class="btn col-4 btn-shine" id="btnExplore">Explore</a>
+          <a class="btn col-4 btn-shine" id="btnExplore" asp-controller="Game" asp-action="Explore" asp-route-playerId="@Model.Id">Explore</a>
 
     </div>
 
