fixed dat de shop niet verlaten kon worden 2.0

--- a/MockupActionCommandGame/Views/Game/Game.cshtml
+++ b/MockupActionCommandGame/Views/Game/Game.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </div>
             
-            <a asp-controller="Shop" asp-action="Shop" asp-route-id="@Model" class="btn btn-shine" id="btnShop">Shop</a>
+            <a asp-controller="Shop" asp-action="Shop" asp-route-id="@ViewData["playerId"]" class="btn btn-shine" id="btnShop">Shop</a>
             
         </section>
         
