--- a/MockupActionCommandGame/Views/Shop/Shop.cshtml
+++ b/MockupActionCommandGame/Views/Shop/Shop.cshtml
@@ -13,7 +13,7 @@
         <h1>@*Welcome Stranger! Anything you need?*@The Duke's Emporium</h1>
     </div>
     <div class="col-2">
-        <a class="btn btn-shine" asp-controller="Game" asp-action="Game" asp-route-id="@ViewData["playerId"]">Leave</a>
+        <a class="btn btn-shine" asp-controller="Game" asp-action="Game">Leave</a>
     </div>
     <div class="col-2">
         <h1 id="wallet">€100</h1>
