--- a/MockupActionCommandGame/Views/Shop/Shop.cshtml
+++ b/MockupActionCommandGame/Views/Shop/Shop.cshtml
@@ -16,7 +16,7 @@
         <a class="btn btn-shine" asp-controller="Game" asp-action="Game">Leave</a>
     </div>
     <div class="col-2">
-        <h1 id="wallet">€100</h1>
+        <h1 id="wallet">€@ViewData["Money"]</h1>
     </div>
 
     
