comment out findAttackItems code

--- a/MockupActionCommandGame/Views/Game/Game.cshtml
+++ b/MockupActionCommandGame/Views/Game/Game.cshtml
@@ -16,17 +16,18 @@
             <div id="inventory">
                 <div class="justify-content-center">
                     <h1>Inventory</h1>
-                    <table>
+                    @*<table>
                         <thead>
                         <tr>
                             <td>Name</td>
-                            @*<td>Attack</td>*@
+                            @*<td>Attack</td>*@@*
                         </tr>
                         </thead>
                         <tbody> 
-                        <partial name="InventoryItemPartial"/>
+                        <partial name="InventoryItemPartial" model=""/>
                         </tbody>
-                    </table>
+                    </table>*@
+
                     @*<h2>Attack</h2>
                     <table>
                         <thead>
