custom font + partials voor registreren en inloggen

--- a/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
+++ b/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
@@ -2,6 +2,9 @@
 
 <head>
     <link rel="stylesheet" href="/css/CharacterSelection.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 
 <h1>Select your character</h1>
