--- a/MockupActionCommandGame/Views/Home/LoginPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginPage.cshtml
@@ -1,9 +1,12 @@
-﻿
+﻿@model ActionCommandGame.Api.Authentication.Model.UserSignInRequest
 @{
     ViewData["Title"] = "LoginPage";
 }
 <head>
     <link rel="stylesheet" href="/css/LoginPage.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 
 <div id="login">
@@ -15,30 +18,13 @@
         <hr/>
 
         <form method="post" asp-action="Login">
-            @model ActionCommandGame.Api.Authentication.Model.UserSignInRequest
-
-            <div class="form-group">
-                <label asp-for="Email">Email:</label>
-                <input asp-for="Email" value="bavo.ketels@vives.be" class="form-control"/>
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">Password:</label>
-                <input asp-for="Password" value="Test123$" class="form-control"/>
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div class="form-group">
-                <label>
-                    <input @*asp-for="RememberMe"*@ type="checkbox"/>
-                    Remember me
-                </label>
-
-            </div>
+            
+            <partial name="LoginRegisterPartial" model="Model"/>
+            
             <div class="form-group">
                 <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">Log in</button>
-                
-
             </div>
+
             <div class="form-group">
                 <p>
                     <a href="#">Forgot your password?</a>
