--- a/MockupActionCommandGame/Views/Home/RegisterPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/RegisterPage.cshtml
@@ -4,6 +4,9 @@
 }
 <head>
     <link rel="stylesheet" href="/css/LoginPage.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 
 <div id="login">
@@ -16,20 +19,10 @@
 
             <hr/>
 
-            <div class="form-group">
-                <label asp-for="Email">Email:</label>
-                <input asp-for="Email" class="form-control"/>
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">Password:</label>
-                <input asp-for="Password" class="form-control"/>
-                <span asp-validation-for="Password"></span>
-            </div>
+            <partial name="LoginRegisterPartial" model="Model"/>
             
             <div class="form-group">
                 <button type="submit" class="btn btn-shine" class="btn-shine" id="btnLoginPage">Register</button>
-
             </div>
         </form>
     </div>
