--- a/MockupActionCommandGame/wwwroot/css/LoginPage.css
+++ b/MockupActionCommandGame/wwwroot/css/LoginPage.css
@@ -4,9 +4,10 @@
     background-size: cover;
 }
 
-/*h1 {
-    margin-top: 25px;
-}*/
+h1{
+    font-family: 'Creepster', cursive;
+    font-size: 4.5em;
+}
 
 #login {
     color: white;
