--- a/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
+++ b/MockupActionCommandGame/Views/Home/CharacterSelection.cshtml
@@ -15,7 +15,9 @@
     {
         <partial name="CharacterSelectionPartial" model=player/>
     }
-
+    
     </tbody>
 </table>
+
+<a class="btn btn-shine" asp-action="CreatePlayer">Create Player</a>
 
