added positive event that can happen when player has no attack item

--- a/MockupActionCommandGame/Views/Home/LoginRegisterPartial.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginRegisterPartial.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ActionCommandGame.Api.Authentication.Model.UserSignInRequest
 <div class="form-group">
     <label asp-for="Email">Email:</label>
-    <input asp-for="Email" type="email" value="bavo.ketels@vives.be" class="form-control"/>
+    <input asp-for="Email" type="email" class="form-control"/>
     <span asp-validation-for="Email"></span>
 </div>
 <div class="form-group">
     <label asp-for="Password">Password:</label>
-    <input asp-for="Password" type="password" value="Test123$" class="form-control"/>
+    <input asp-for="Password" type="password" class="form-control"/>
     <span asp-validation-for="Password"></span>
 </div>
