--- a/MockupActionCommandGame/Views/Home/LoginPage.cshtml
+++ b/MockupActionCommandGame/Views/Home/LoginPage.cshtml
@@ -26,11 +26,11 @@
             </div>
 
             <div class="form-group">
-                <p>
+                @*<p>
                     <a href="#">Forgot your password?</a>
-                </p>
+                </p>*@
                 <p>
-                    <a asp-controller="Home" asp-action="RegisterPage">RegisterPage</a>
+                    <a asp-controller="Home" asp-action="RegisterPage">Register</a>
                 </p>
             </div>
         </form>
